# serializer version: 1
# name: test_all_entities[device_tracker.testdevice1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.testdevice1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TestDevice1',
    'platform': 'bbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_tracker',
    'unique_id': 'aa:bb:cc:dd:ee:ff',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[device_tracker.testdevice1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_category': 'computer',
      'device_model': 'PC',
      'device_type': 'computer',
      'estimated_rate': 144,
      'first_seen': datetime.datetime(2025, 1, 1, 10, 0, tzinfo=datetime.timezone.utc),
      'friendly_name': 'TestDevice1',
      'host_name': 'TestDevice1',
      'ip': '192.168.1.10',
      'ip_assignment': 'DHCP',
      'last_seen': 3600,
      'link_type': '2.4',
      'mac': 'aa:bb:cc:dd:ee:ff',
      'manufacturer': 'Generic',
      'operating_system': 'Windows',
      'signal_strength': -45,
      'source_type': <SourceType.ROUTER: 'router'>,
      'wireless_band': '2.4',
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.testdevice1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_all_entities[device_tracker.testdevice2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.testdevice2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TestDevice2',
    'platform': 'bbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_tracker',
    'unique_id': 'ff:ee:dd:cc:bb:aa',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[device_tracker.testdevice2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_category': 'phone',
      'device_model': 'iPhone',
      'device_type': 'phone',
      'estimated_rate': 866,
      'first_seen': datetime.datetime(2025, 1, 1, 10, 0, tzinfo=datetime.timezone.utc),
      'friendly_name': 'TestDevice2',
      'host_name': 'TestDevice2',
      'ip': '192.168.1.11',
      'ip_assignment': 'DHCP',
      'ipv6_addresses': '2001:db8::1',
      'last_seen': 1800,
      'link_type': '5',
      'mac': 'ff:ee:dd:cc:bb:aa',
      'manufacturer': 'Apple',
      'operating_system': 'iOS',
      'signal_strength': -65,
      'source_type': <SourceType.ROUTER: 'router'>,
      'wireless_band': '5',
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.testdevice2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
